web-infras/parser/tests/fixtures/babel/es2015/uncategorised/297/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,2)
1|(eval) => { "use strict"; 42 }
 |^
